--- a/app/views/admin/sites/_form.html.erb
+++ b/app/views/admin/sites/_form.html.erb
@@ -1,4 +1,5 @@
 <%= form_for([:admin, site]) do |f| %>
+    <%= f.hidden_field :step, value: '1' %>
     <% if site.errors.any? %>
         <div id="error_explanation">
           <h2><%= pluralize(site.errors.count, "error") %> prohibited this site from being saved:</h2>
@@ -22,19 +23,7 @@
         <%= f.collection_select :site_template_id, SiteTemplate.all, :id, :name, {}, {:class => 'form-control'} %>
       </div>
     </fieldset>
-
-    <fieldset class="form-group row">
-      <%= f.label :users, class: 'col-sm-2 form-control-label' %>
-      <div class="col-sm-10">
-        <%= f.collection_select :user_ids, User.all, :id, :name, {}, {:class => 'form-control', :multiple => true} %>
-      </div>
-    </fieldset>
-
-    <div class="form-group row">
-      <div class="col-sm-offset-2 col-sm-10">
-        <%= f.submit class: 'btn btn-primary' %>
-        <%= link_to 'Show', admin_site_path(site), class: 'btn btn-secondary' unless site.id.nil? %>
-        <%= link_to 'Back', admin_sites_path, class: 'btn btn-secondary' %>
-      </div>
-    </div>
+    <%= render partial: 'footer', locals: { f: f , submit_text: 'CREATE', home: false} %>
 <% end %>
+
+<%= console %>
