Basic site structure tree

--- a/app/views/management/sites/structure.html.erb
+++ b/app/views/management/sites/structure.html.erb
@@ -1,5 +1,6 @@
 <div class="js-tabs"></div>
 <div class="wrapper">
+  <div class="js-tree"></div>
   <h1>Structure</h1>
 
   <table class="table table-bordered">
