Integrate backend content into themes

--- a/app/assets/stylesheets/front/application-theme-fa.scss
+++ b/app/assets/stylesheets/front/application-theme-fa.scss
@@ -1,8 +1,8 @@
 @import
 'leaflet',
 'icons',
-'settings-theme-2',
-'base-theme-2',
+'settings-theme-fa',
+'base-theme-fa',
 '../layouts/*',
 '../components/shared/**/*',
 '../components/front/**/*';
