--- a/app/assets/stylesheets/front/application-theme-lsa.scss
+++ b/app/assets/stylesheets/front/application-theme-lsa.scss
@@ -1,8 +1,8 @@
 @import
 'leaflet',
 'icons',
-'settings-theme-1',
-'base-theme-1',
+'settings-theme-lsa',
+'base-theme-lsa',
 '../layouts/*',
 '../components/shared/**/*',
 '../components/front/**/*';
