--- a/app/views/front/_cover.html.erb
+++ b/app/views/front/_cover.html.erb
@@ -1,6 +1,5 @@
 <div class="c-cover">
   <div class="wrapper">
-  <!-- Replace with title content -->
-    <h2 class="cover-title">Interactive Forest Atlas of the Central African Republic</h2>
+    <h2 class="cover-title"><%= @site_page.name %></h2>
   </div>
 </div>
