--- a/app/views/site_page/open_content.html.erb
+++ b/app/views/site_page/open_content.html.erb
@@ -1,6 +1,8 @@
-<h1>Open content</h1>
-<h3><%= @site_page.name %></h3>
+<%= render 'front/cover'%>
+
 <%= @site_page.content.html_safe unless @site_page.content.blank? %>
+
+<%= render 'front/footer'%>
 
 <script type="text/javascript">
   window.route = 'OpenContent';
