--- a/app/views/site_page/show.html.erb
+++ b/app/views/site_page/show.html.erb
@@ -1,2 +1,3 @@
 <h1><%= @site_page.name %></h1>
-<%= @site_page.content.html_safe unless @site_page.content.blank? %>
+
+<% render 'front/content', content: @site_page.content %>
