--- a/app/views/admin/sites/display.html.erb
+++ b/app/views/admin/sites/display.html.erb
@@ -1,6 +1,6 @@
 <h1>SITE CREATE!</h1>
 <h2>What do you want to do now?</h2>
 
-<%= button_to  @site.url ,'GO TO SITE' %>
-<%= button_to new_admin_site_path, 'CREATE A NEW SITE' %>
-<%= button_to admin_sites_path, 'SEE MY SITES' %>
+<%= link_to  'GO TO SITE', @site.url, target: '_blank' %>
+<%= link_to 'CREATE A NEW SITE', new_admin_site_path %>
+<%= link_to 'SEE MY SITES', admin_sites_path %>
