--- a/app/assets/stylesheets/management/_settings.scss
+++ b/app/assets/stylesheets/management/_settings.scss
@@ -41,6 +41,7 @@ $color-4:  #555;
 $color-5:  #000;
 $color-6:  #333;
 $color-7:  #dededd;
+$color-8:  #ff706c;
 
 // General layout
 $body-max-width:         1280px;
