--- a/app/assets/stylesheets/components/front/c-header.scss
+++ b/app/assets/stylesheets/components/front/c-header.scss
@@ -265,16 +265,18 @@
             }
 
             li {
-              display:block;
-              height: 50px;
-                border-bottom: 1px solid $color-9;
+              display: block;
+              border-bottom: 1px solid $color-9;
+              text-align: center;
 
               @if $theme == 2 {
                 color: $color-6;
               }
 
+              // The first item isn't a sub-menu element but a copy of the parent element
               &:first-of-type {
-                text-align: center;
+                height: 50px;
+                line-height: 50px;
                 cursor: pointer;
               }
 
@@ -285,6 +287,7 @@
               }
 
               &:not(:first-of-type) {
+                line-height: 1.3;
                 text-transform: none;
 
                 &:hover {
@@ -297,6 +300,8 @@
                 }
 
                 a {
+                  padding: 15px 5px;
+
                   @if $theme == 1 {
                     color: $color-6;
                   }
@@ -363,9 +368,14 @@
   }
 
   > .sub-menu {
+    display: none;
     height: 0; // Trick so the content will be on top of what's following
-    font-size: $font-size-small;
     color: $color-3;
+    font-size: $font-size-small;
+
+    @media #{$mq-tablet} {
+      display: block;
+    }
 
     a {
       color: $color-3;
@@ -411,12 +421,8 @@
       }
 
       > .sections {
-        display: none;
+        display: inline-block;
         height: 100%;
-
-        @media #{$mq-tablet} {
-          display: inline-block;
-        }
 
         li {
           height: 100%;
