Minor corrections to page creation and structure

--- a/app/views/management/sites/structure.html.erb
+++ b/app/views/management/sites/structure.html.erb
@@ -2,6 +2,7 @@
 <div class="wrapper">
   <div class="js-tree"></div>
   <h1>Structure</h1>
+  <%= include_gon %>
 
   <table class="table table-bordered">
     <thead>
