--- a/app/views/management/site_pages/index.html.erb
+++ b/app/views/management/site_pages/index.html.erb
@@ -18,6 +18,7 @@
           <td><%= site_page.name %></td>
           <td><%= site_page.site.name %></td>
           <td><%= site_page.url %></td>
+          <td><%= link_to site_page.enabled ? 'Disable' : 'Enable', toggle_enable_management_site_page_path(site_page), method: :put %></td>
           <td><%= link_to 'Show', management_site_page_path(site_page) %></td>
           <td><%= link_to 'Edit', edit_management_site_page_path(site_page) %></td>
           <td><%= link_to 'Destroy', management_site_page_path(site_page), method: :delete, data: { confirm: 'Are you sure?' } %></td>
