--- a/app/assets/stylesheets/components/front/c-header.scss
+++ b/app/assets/stylesheets/components/front/c-header.scss
@@ -126,10 +126,14 @@
       li {
         display: block;
         padding: 10px 0;
+      }
 
-        ul {
-          margin-top: 10px;
-          padding-left: 15px;
+      ul {
+        margin-top: 10px;
+        padding-left: 10px;
+
+        &.third-level {
+          padding-left: 5px;
         }
       }
     }
