--- a/app/views/front/_menu.html.erb
+++ b/app/views/front/_menu.html.erb
@@ -7,7 +7,16 @@
             <% if !child_page.children.nil? %>
                 <ul>
                   <% child_page.children.each do |grandchild_page| -%>
-                      <li><a href="<%= grandchild_page.url %>"><%= grandchild_page.name %></a></li>
+                      <li>
+                        <a href="<%= grandchild_page.url %>"><%= grandchild_page.name %></a>
+                        <% if !grandchild_page.children.nil? %>
+                          <ul class="third-level">
+                            <% grandchild_page.children.each do |sub_section| -%>
+                                <li><a href="<%= sub_section.url %>"><%= sub_section.name %></a></li>
+                            <% end %>
+                          </ul>
+                        <% end %>
+                      </li>
                   <% end -%>
                 </ul>
             <% end -%>
