--- a/app/views/admin/site_templates/edit.html.erb
+++ b/app/views/admin/site_templates/edit.html.erb
@@ -1,3 +1,5 @@
-<h1>Editing Site Template</h1>
+<div class="c-dashboard">
+  <h1 class="title-dashboard">Editing Site Template</h1>
 
-<%= render 'form', site_template: @site_template %>
+  <%= render 'form', site_template: @site_template %>
+</div>
