--- a/app/assets/stylesheets/admin/_settings.scss
+++ b/app/assets/stylesheets/admin/_settings.scss
@@ -40,6 +40,7 @@ $color-3:  #fff;
 $color-4:  #555;
 $color-5:  #000;
 $color-6:  #333;
+$color-7:  #3b3b3b;
 
 // General layout
 $body-max-width:         1280px;
