--- a/app/views/admin/dashboard.html.erb
+++ b/app/views/admin/dashboard.html.erb
@@ -1,4 +1,6 @@
-<h1>Admin</h1>
+<div class="c-dashboard">
+  <h1 class="title-dashboard">Admin</h1>
 
-<table class="table table-bordered">
-</table>
+  <table class="table table-bordered">
+  </table>
+</div>
