add new form´s styles

--- a/app/assets/stylesheets/components/admin/c-navbar.scss
+++ b/app/assets/stylesheets/components/admin/c-navbar.scss
@@ -38,6 +38,10 @@
       .nav-link {
         color: $color-3;
         font-family: $font-family-1;
+
+        &.active {
+          border-bottom: 2px solid $color-3;
+        }
       }
     }
   }
