--- a/app/assets/stylesheets/components/shared/c-button.scss
+++ b/app/assets/stylesheets/components/shared/c-button.scss
@@ -1,10 +1,18 @@
 .c-button {
   padding: 10px 80px;
   border-radius: 36px;
-  color: $color-3;
+  outline: 0;
   font-size: $font-size-small;
 
   &.-green {
+    border: 0;
     background-color: $color-1;
+    color: $color-3;
+  }
+
+  &.-white {
+    border: 1px solid $color-1;
+    background-color: $color-3;
+    color: $color-1;
   }
 }
