--- a/app/views/admin/sites/new.html.erb
+++ b/app/views/admin/sites/new.html.erb
@@ -1,3 +1,6 @@
-<h1>New Site</h1>
+<div class="c-dashboard">
+  <h1 class="title-dashboard">New Site</h1>
 
 <%= render 'form', site: @site %>
+
+</div>
